# axiclient

./: .example.sh.swp  CMakeLists.txt  GPIO.cpp  GPIO.h  Makefile  README.md  Test  axiopcjsonclient.cpp  axiopcjsonclient.h  clean.sh  device.cpp  device.h  easylogging++.h  function.cpp  function.h  make.sh  simpleclient.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml  timestamps-10.174.18.12-root-22  timestamps-10.174.18.15-root-22  timestamps-10.174.18.22-sadovnikovv-22  timestamps-10.174.18.223-root-22  timestamps-10.174.18.66-root-22  timestamps-10.174.18.77-root-22  timestamps-localhost-vagrant-2222
